--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ python:
 - '3.8'
 install:
 - pip install -r requirements.txt
+script:
+- python manage.py test
 deploy:
   provider: heroku
   api_key:
