--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.3.1
+beautifulsoup4==4.9.3
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
@@ -7,15 +8,22 @@ defusedxml==0.7.0
 dj-database-url==0.5.0
 Django==3.1.7
 django-allauth==0.44.0
+django-bootstrap==0.2.4
+django-bootstrap4==2.3.1
+django-countries==7.1
+heroku==0.1.4
 idna==2.10
 oauthlib==3.1.0
+Pillow==8.1.2
 psycopg2==2.8.6
 pycparser==2.20
 PyJWT==2.0.1
+python-dateutil==1.5
 python3-openid==3.2.0
 pytz==2021.1
 requests==2.25.1
 requests-oauthlib==1.3.0
+soupsieve==2.2.1
 sqlparse==0.4.1
 urllib3==1.26.3
 whitenoise==5.2.0
