--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,74 @@
+amqp==5.0.5
+anaconda==0.0.1.1
 asgiref==3.3.1
+backcall==0.2.0
 beautifulsoup4==4.9.3
+billiard==3.6.3.0
+bootstrap4==0.1.0
+celery==5.0.5
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
+click==7.1.2
+click-didyoumean==0.0.3
+click-plugins==1.1.1
+click-repl==0.1.6
+colorama==0.4.4
 cryptography==3.4.6
-defusedxml==0.7.0
+cycler==0.10.0
+decorator==4.4.2
+defusedxml==0.7.1
 dj-database-url==0.5.0
-Django==3.1.7
+Django==3.1.6
 django-allauth==0.44.0
-django-bootstrap==0.2.4
 django-bootstrap4==2.3.1
-django-countries==7.1
-heroku==0.1.4
+django-celery-progressbar==0.2.3
+django-heroku==0.3.1
+gunicorn==20.0.4
 idna==2.10
+install==1.3.4
+ipython==7.16.1
+ipython-genutils==0.2.0
+jedi==0.17.2
+joblib==1.0.0
+kiwisolver==1.3.1
+kombu==5.0.2
+matplotlib==3.3.3
+mysql-connector-python==8.0.22
+numpy==1.19.4
 oauthlib==3.1.0
-Pillow==8.1.2
+pandas==1.1.5
+parso==0.7.1
+patsy==0.5.1
+pickleshare==0.7.5
+Pillow==8.0.1
+prompt-toolkit==3.0.8
+protobuf==3.14.0
 psycopg2==2.8.6
 pycparser==2.20
+pygame==1.9.6
+Pygments==2.7.3
 PyJWT==2.0.1
-python-dateutil==1.5
+pyparsing==2.4.7
+python-dateutil==2.8.1
 python3-openid==3.2.0
-pytz==2021.1
+pytz==2020.4
 requests==2.25.1
 requests-oauthlib==1.3.0
-soupsieve==2.2.1
+scikit-learn==0.23.2
+scipy==1.5.4
+six==1.15.0
+soupsieve==2.1
 sqlparse==0.4.1
-urllib3==1.26.3
+statsmodels==0.12.1
+sudo==1.0.0
+threadpoolctl==2.1.0
+traitlets==4.3.3
+urllib3==1.26.2
+vine==5.0.0
+wcwidth==0.2.5
 whitenoise==5.2.0
-django-bootstrap4==2.3.1
+XlsxWriter==1.3.7
 
 gunicorn
 django-heroku
