--- a/requirements.txt
+++ b/requirements.txt
@@ -46,7 +46,7 @@ prompt-toolkit==3.0.8
 protobuf==3.14.0
 psycopg2==2.8.6
 pycparser==2.20
-pygame==1.9.6
+pygame==2.0.0.dev10
 Pygments==2.7.3
 PyJWT==2.0.1
 pyparsing==2.4.7
