--- a/requirements.txt
+++ b/requirements.txt
@@ -62,6 +62,7 @@ scikit-learn==0.23.2
 scipy==1.5.4
 six==1.15.0
 soupsieve==2.1
+spotipy==2.17.1
 sqlparse==0.4.1
 statsmodels==0.12.1
 sudo==1.0.0
