--- a/requirements.txt
+++ b/requirements.txt
@@ -49,7 +49,7 @@ psycopg2==2.8.6
 psycopg2-binary==2.8.6
 psycopg2-pool==1.1
 pycparser==2.20
-pygame==2.0.0.dev10
+pygame==2.0.0.
 Pygments==2.7.3
 PyJWT==2.0.1
 pyparsing==2.4.7
@@ -58,7 +58,7 @@ python3-openid==3.2.0
 pytz==2020.4
 requests==2.25.1
 requests-oauthlib==1.3.0
-scikit-learn==0.23.2
+scikit-learn==0.24.1
 scipy==1.5.4
 six==1.15.0
 soupsieve==2.1
